# boteye

./: README.md  config_environment.sh
XP/config/: algorithm_param.yaml  depth_param.yaml  ir_depth_param.yaml  navigation_param.yaml  navigation_param_gyroor.yaml  navigation_param_waffle.yaml
XP/config/thread_param/: odroidxu4.yaml  pc.yaml  rk3399.yaml
apps/: CMakeLists.txt
apps/app_tracking/: CMakeLists.txt  app_guide_receiver.cpp  app_pose_receiver.cpp  app_tracking.cpp  plotting_utils.cpp  plotting_utils.h  xp_driver_interface.cc  xp_driver_interface.h
apps/app_tracking/msg/: XpDriverImage.msg  XpDriverImu.msg
apps/cam_calibration/: CMakeLists.txt  cam_calibration.cpp  verification.cpp
apps/xp_sensor_logger/: CMakeLists.txt  xp_sensor_logger.cpp
calib_params/: 054AC6A9044F.calib.yaml  408C392FF83F.calib.yaml  4924E006C82A.calib.yaml  505FC7C0497A.calib.yaml  7E92FAF26363.calib.yaml  8219C930E5FC.calib.yaml  8E1BC83F0421.calib.yaml  93312E057D22.calib.yaml  A72F4DA6A92D.calib.yaml  BAAFF337329A.calib.yaml  BDC4FA571539.calib.yaml  BK171200024.yaml  BK171200025.yaml  BK171200025.yaml~  BK171200026.yaml  BK171200028.yaml  BK171200034.yaml  BK171200039.yaml  BK171200040.yaml  DFCDC2D10CD9.calib.yaml  FC329CAD406E.calib.yaml  XP0000001.calib.yaml  XP0000002.calib.yaml  XP0000003.calib.yaml  XP0000004.calib.yaml  XP0000005.calib.yaml  XP0000007.calib.yaml  XP0000008.calib.yaml  XP0020001.calib.yaml  XP0020002.yaml  XPIC2C000162560032.yaml  XPIC2C000163560003.yaml  XPIC2C000163560005.yaml  XPIC2C000163560011.yaml  XPIC2C000163560015.yaml  XPIC2C000163560018.yaml  XPIC2C000163560021.calib.yaml  XPIC2C000163560023.calib.yaml  XPIC2C000163560031.yaml  XPIC2C000163560035.yaml  (+46 more)
cmake/: XP_custom_3rdparty_helper.cmake  XP_lib_helper.cmake  XP_sys_3rdparty_helper.cmake
docs/: actuator.md  calibration.md  navigation.md  record.md
include/XP/app_api/: pose_packet.h  xp_tracker.h
include/XP/data_atom/: basic_datatype.h
include/XP/depth/: depth_utils.h
include/XP/driver/: LI_sensor.h  XP_sensor.h  XP_sensor_driver.h  xp_aec_table.h
include/XP/helper/: file_io.h  param.h  param_internal.h  serial-lib.h  server_http.hpp  shared_queue.h  status_code.hpp  tag_detector.h  timer.h  utility.hpp
include/XP/util/: base64.h  calibration_utils.h  depth_utils.h  feature_utils.h  image_utils.h
include/XP/util/aip/: face.h  image_classify.h  ocr.h  speech.h
include/XP/util/aip/base/: base.h  http.h  utils.h
include/XP/worker/: actuator.h  actuator_impl.h  scanner.h  scanner_impl.h
include/driver/: AR0141_aec_table.h  LI_sensor.h  XP_sensor.h  XP_sensor_driver.h  base_sensor_driver.h  basic_datatype.h  firmware_config.h  rk_sensor.h  rk_sensor_driver.h  rkisp_interface.h  v4l2.h  v4l2_rk.h  xp_aec_table.h  xp_driver_config.h  xp_driver_utils.h  xp_sensors_wb_table.h
include/driver/helper/: basic_image_utils.h  counter_32_to_64.h  ring_buffer.h  shared_queue.h  sync_shared_queue.h  timer.h  xp_logging.h
include/driver/helper/base/: base64.h
include/navigation/: navigation_type.h
scripts/: calib_compute.sh  calib_data.sh  folders.sh  navi.sh  record.sh  release_navi.sh
